# mod-manager

./: .gitignore  LICENSE  README.md
app/: Cargo.toml  paths.json
app/src/: main.rs
app/src/data/: game_list_data.rs  mod.rs
modman/: Cargo.toml  paths.json
modman/src/: main.rs
modman/src/data/: game_data.rs  game_list_data.rs  handle_list.rs  mod.rs
modman/src/util/: mod.rs  vec_tools.rs
