[package]
name = "modman"
version = "0.1.0"
edition = "2024"
authors = ["Nicholas Hellmers Davalos <nihe1661@colorado.edu>"]
license = "MIT"
description = "A tool for modpacks"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# This makes sure we run in optimized mode
[profile.dev]
opt-level = 3
